<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2016 Thomas Christensen <christensenthomas@gmail.com>
  ~
  ~ All right reserved.
  -->

<merge xmlns:android="http://schemas.android.com/apk/res/android"
       xmlns:tools="http://schemas.android.com/tools"
       tools:showIn="@layout/fragment_editor">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="?android:actionBarSize"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/close"
            style="@style/Widget.AppCompat.ActionButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/close_the_editor_cd"
            android:src="@drawable/ic_close_white_24dp"/>

        <Space
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?actionBarItemBackground"
            android:text="@string/save"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="?android:actionBarSize"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <Space
            android:layout_width="@dimen/activity_horizontal_margin"
            android:layout_height="wrap_content"/>

        <EditText
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:hint="@string/enter_name_of_loan"
            android:inputType="textCapSentences"
            android:singleLine="true">

            <requestFocus/>

        </EditText>

    </LinearLayout>

</merge>