<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2016 Thomas Christensen <christensenthomas@gmail.com>
  ~
  ~ All right reserved.
  -->

<android.support.design.widget.CoordinatorLayout
    android:id="@+id/coordinator"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@android:color/white"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.EditorActivity">

    <android.support.v4.widget.NestedScrollView
        android:id="@+id/nested"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingEnd="@dimen/activity_horizontal_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingStart="@dimen/activity_horizontal_margin">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="?android:actionBarSize"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/image1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/icon_body_gap"
                    android:layout_marginRight="@dimen/icon_body_gap"
                    android:alpha="0.54"
                    android:contentDescription="@string/loan_type"
                    android:src="@drawable/ic_menu_black_24dp"/>

                <Spinner
                    android:id="@+id/loan_type"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            </LinearLayout>

            <View
                android:id="@+id/separator1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="56dp"
                android:layout_marginStart="56dp"
                android:background="?android:dividerVertical"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="?android:actionBarSize"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/image2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:alpha="0.54"
                    android:contentDescription="@string/principal"
                    android:src="@drawable/ic_attach_money_black_24dp"/>

                <TextView
                    android:id="@+id/principal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="end"
                    android:singleLine="true"
                    android:textColor="@color/clickable"
                    tools:text="0.00"/>

            </LinearLayout>

            <View
                android:id="@+id/separator2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="56dp"
                android:layout_marginStart="56dp"
                android:background="?android:dividerVertical"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="?android:actionBarSize"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/image3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/icon_body_gap"
                    android:layout_marginRight="@dimen/icon_body_gap"
                    android:alpha="0.54"
                    android:contentDescription="@string/term"
                    android:src="@drawable/ic_autorenew_black_24dp"/>

                <TextView
                    android:id="@+id/term"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            </LinearLayout>

            <View
                android:id="@+id/separator3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="56dp"
                android:layout_marginStart="56dp"
                android:background="?android:dividerVertical"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="?android:actionBarSize"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/image4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/icon_body_gap"
                    android:layout_marginRight="@dimen/icon_body_gap"
                    android:alpha="0.54"
                    android:contentDescription="@string/first_payment"
                    android:src="@drawable/ic_access_time_black_24dp"/>

                <TextView
                    android:id="@+id/text1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            </LinearLayout>

            <View
                android:id="@+id/separator4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="56dp"
                android:layout_marginStart="56dp"
                android:background="?android:dividerVertical"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:minHeight="36dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/image5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/icon_body_gap"
                    android:layout_marginRight="@dimen/icon_body_gap"
                    android:alpha="0.54"
                    android:contentDescription="@string/amount"
                    android:src="@drawable/ic_payment_black_24dp"/>

                <Spinner
                    android:id="@+id/payment_type"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:entries="@array/payment_types"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="36dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <Space
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginEnd="@dimen/icon_body_gap"
                    android:layout_marginRight="@dimen/icon_body_gap"/>

                <TextView
                    android:id="@+id/amount_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/amount"/>

                <TextView
                    android:id="@+id/amount"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="end"
                    android:singleLine="true"
                    android:textColor="@color/clickable"
                    tools:text="0.00"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="36dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <Space
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginEnd="@dimen/icon_body_gap"
                    android:layout_marginRight="@dimen/icon_body_gap"/>

                <TextView
                    android:id="@+id/rate_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/annual_rate"/>

                <TextView
                    android:id="@+id/rate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="end"
                    android:singleLine="true"
                    android:textColor="@color/clickable"
                    tools:text="0.00"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="36dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <Space
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginEnd="@dimen/icon_body_gap"
                    android:layout_marginRight="@dimen/icon_body_gap"/>

                <TextView
                    android:id="@+id/prate_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/periodic_rate"/>

                <TextView
                    android:id="@+id/prate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="end"
                    android:singleLine="true"
                    android:textColor="@color/clickable"
                    tools:text="0.00"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="36dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <Space
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginEnd="@dimen/icon_body_gap"
                    android:layout_marginRight="@dimen/icon_body_gap"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fee"/>

                <TextView
                    android:id="@+id/fee"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="end"
                    android:singleLine="true"
                    android:textColor="@color/clickable"
                    tools:text="0.00"/>
            </LinearLayout>

        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark">

        <include layout="@layout/fragment_editor_appbar"/>

    </android.support.design.widget.AppBarLayout>

</android.support.design.widget.CoordinatorLayout>
